parser/goyacc/y.output

state 0
	$accept: .input $end 

	EXPLAIN  shift 3
	CREATE  shift 12
	DROP  shift 10
	SELECT  shift 17
	FROM  shift 16
	.  error

	input  goto 1
	stmt  goto 2
	select_stmt  goto 4
	create_index_stmt  goto 5
	drop_index_stmt  goto 6
	create_primary_index_stmt  goto 8
	create_secondary_index_stmt  goto 9
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  stmt.    (1)

	.  reduce 1 (src line 54)


state 3
	input:  EXPLAIN.stmt 

	CREATE  shift 12
	DROP  shift 10
	SELECT  shift 17
	FROM  shift 16
	.  error

	stmt  goto 18
	select_stmt  goto 4
	create_index_stmt  goto 5
	drop_index_stmt  goto 6
	create_primary_index_stmt  goto 8
	create_secondary_index_stmt  goto 9
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15

state 4
	stmt:  select_stmt.    (3)

	.  reduce 3 (src line 64)


state 5
	stmt:  create_index_stmt.    (4)

	.  reduce 4 (src line 68)


state 6
	stmt:  drop_index_stmt.    (5)

	.  reduce 5 (src line 71)


state 7
	select_stmt:  select_compound.    (21)

	.  reduce 21 (src line 235)


state 8
	create_index_stmt:  create_primary_index_stmt.    (6)

	.  reduce 6 (src line 78)


state 9
	create_index_stmt:  create_secondary_index_stmt.    (7)

	.  reduce 7 (src line 82)


state 10
	drop_index_stmt:  DROP.INDEX IDENTIFIER DOT IDENTIFIER 
	drop_index_stmt:  DROP.INDEX COLON IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	INDEX  shift 19
	.  error


state 11
	select_compound:  select_core.select_order select_limit_offset 
	select_order: .    (84)

	ORDER  shift 21
	.  reduce 84 (src line 735)

	select_order  goto 20

state 12
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON IDENTIFIER 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE.PRIMARY INDEX ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE.INDEX IDENTIFIER ON select_stmt 

	PRIMARY  shift 22
	INDEX  shift 23
	.  error


state 13
	select_core:  select_select.select_from select_where select_group_having 
	select_from: .    (43)

	FROM  shift 25
	.  reduce 43 (src line 400)

	select_from  goto 24

state 14
	select_core:  select_from_required.select_where select_group_having select_select 
	select_where: .    (82)

	WHERE  shift 27
	.  reduce 82 (src line 719)

	select_where  goto 26

state 15
	select_select:  select_select_head.select_select_qualifier select_select_tail 
	select_select_qualifier: .    (31)

	DISTINCT  shift 29
	UNIQUE  shift 30
	.  reduce 31 (src line 301)

	select_select_qualifier  goto 28

state 16
	select_from_required:  FROM.data_source_unnest 
	select_from_required:  FROM.COLON IDENTIFIER DOT data_source_unnest 

	COLON  shift 32
	IDENTIFIER  shift 35
	.  error

	data_source_unnest  goto 31
	data_source  goto 33
	path  goto 34

state 17
	select_select_head:  SELECT.    (30)

	.  reduce 30 (src line 295)


state 18
	input:  EXPLAIN stmt.    (2)

	.  reduce 2 (src line 58)


state 19
	drop_index_stmt:  DROP INDEX.IDENTIFIER DOT IDENTIFIER 
	drop_index_stmt:  DROP INDEX.COLON IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	COLON  shift 37
	IDENTIFIER  shift 36
	.  error


state 20
	select_compound:  select_core select_order.select_limit_offset 
	select_limit_offset: .    (91)

	LIMIT  shift 40
	.  reduce 91 (src line 786)

	select_limit_offset  goto 38
	select_limit  goto 39

state 21
	select_order:  ORDER.BY sorting_list 

	BY  shift 41
	.  error


state 22
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE PRIMARY.INDEX ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 

	INDEX  shift 42
	.  error


state 23
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX.IDENTIFIER ON select_stmt 

	IDENTIFIER  shift 43
	.  error


state 24
	select_core:  select_select select_from.select_where select_group_having 
	select_where: .    (82)

	WHERE  shift 27
	.  reduce 82 (src line 719)

	select_where  goto 44

state 25
	select_from:  FROM.data_source_unnest 
	select_from:  FROM.COLON IDENTIFIER DOT data_source_unnest 

	COLON  shift 46
	IDENTIFIER  shift 35
	.  error

	data_source_unnest  goto 45
	data_source  goto 33
	path  goto 34

state 26
	select_core:  select_from_required select_where.select_group_having select_select 
	select_group_having: .    (25)

	GROUP  shift 48
	.  reduce 25 (src line 258)

	select_group_having  goto 47

state 27
	select_where:  WHERE.expression 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expression  goto 49
	expr  goto 50
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 28
	select_select:  select_select_head select_select_qualifier.select_select_tail 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	MULT  shift 80
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expression  goto 79
	select_select_tail  goto 75
	result_list  goto 76
	result_single  goto 77
	dotted_path_star  goto 78
	expr  goto 81
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 29
	select_select_qualifier:  DISTINCT.    (32)

	.  reduce 32 (src line 304)


state 30
	select_select_qualifier:  UNIQUE.    (33)

	.  reduce 33 (src line 314)


state 31
	select_from_required:  FROM data_source_unnest.    (46)

	.  reduce 46 (src line 430)


state 32
	select_from_required:  FROM COLON.IDENTIFIER DOT data_source_unnest 

	IDENTIFIER  shift 82
	.  error


state 33
	data_source_unnest:  data_source.    (48)
	data_source_unnest:  data_source.unnest_source 

	JOIN  shift 85
	UNNEST  shift 84
	INNER  shift 87
	LEFT  shift 88
	.  reduce 48 (src line 455)

	unnest_source  goto 83
	join_type  goto 86

state 34
	data_source:  path.    (74)
	data_source:  path.key_expr 
	data_source:  path.AS IDENTIFIER 
	data_source:  path.IDENTIFIER 
	data_source:  path.AS IDENTIFIER key_expr 
	data_source:  path.IDENTIFIER key_expr 
	path:  path.LBRACKET INT RBRACKET 
	path:  path.LBRACKET INT COLON INT RBRACKET 
	path:  path.LBRACKET INT COLON RBRACKET 
	path:  path.LBRACKET COLON INT RBRACKET 
	path:  path.DOT IDENTIFIER 

	AS  shift 90
	KEY  shift 94
	KEYS  shift 95
	LBRACKET  shift 92
	IDENTIFIER  shift 91
	DOT  shift 93
	.  reduce 74 (src line 652)

	key_expr  goto 89

state 35
	path:  IDENTIFIER.    (153)

	.  reduce 153 (src line 1268)


state 36
	drop_index_stmt:  DROP INDEX IDENTIFIER.DOT IDENTIFIER 

	DOT  shift 96
	.  error


state 37
	drop_index_stmt:  DROP INDEX COLON.IDENTIFIER DOT IDENTIFIER DOT IDENTIFIER 

	IDENTIFIER  shift 97
	.  error


state 38
	select_compound:  select_core select_order select_limit_offset.    (22)

	.  reduce 22 (src line 241)


state 39
	select_limit_offset:  select_limit.    (92)
	select_limit_offset:  select_limit.select_offset 

	OFFSET  shift 99
	.  reduce 92 (src line 790)

	select_offset  goto 98

state 40
	select_limit:  LIMIT.INT 

	INT  shift 100
	.  error


state 41
	select_order:  ORDER BY.sorting_list 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expression  goto 103
	expr  goto 50
	sorting_list  goto 101
	sorting_single  goto 102
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 42
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE PRIMARY INDEX.ON COLON IDENTIFIER DOT IDENTIFIER USING view_using 

	ON  shift 104
	.  error


state 43
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER.ON select_stmt 

	ON  shift 105
	.  error


state 44
	select_core:  select_select select_from select_where.select_group_having 
	select_group_having: .    (25)

	GROUP  shift 48
	.  reduce 25 (src line 258)

	select_group_having  goto 106

state 45
	select_from:  FROM data_source_unnest.    (44)

	.  reduce 44 (src line 404)


state 46
	select_from:  FROM COLON.IDENTIFIER DOT data_source_unnest 

	IDENTIFIER  shift 107
	.  error


state 47
	select_core:  select_from_required select_where select_group_having.select_select 

	SELECT  shift 17
	.  error

	select_select  goto 108
	select_select_head  goto 15

state 48
	select_group_having:  GROUP.BY expression_list having 

	BY  shift 109
	.  error


state 49
	select_where:  WHERE expression.    (83)

	.  reduce 83 (src line 723)


state 50
	expression:  expr.    (96)
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.MOD expr 
	expr:  expr.CONCAT expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 
	expr:  expr.LIKE expr 
	expr:  expr.NOT LIKE expr 
	expr:  expr.DOT IDENTIFIER 
	expr:  expr.LBRACKET expr RBRACKET 
	expr:  expr.LBRACKET INT COLON INT RBRACKET 
	expr:  expr.LBRACKET INT COLON RBRACKET 
	expr:  expr.LBRACKET COLON INT RBRACKET 
	expr:  expr.IS NULL 
	expr:  expr.IS NOT NULL 
	expr:  expr.IS MISSING 
	expr:  expr.IS NOT MISSING 
	expr:  expr.IS VALUED 
	expr:  expr.IS NOT VALUED 

	LBRACKET  shift 127
	PLUS  shift 110
	MINUS  shift 111
	MULT  shift 112
	DIV  shift 113
	CONCAT  shift 115
	AND  shift 116
	OR  shift 117
	NOT  shift 125
	EQ  shift 118
	NE  shift 123
	GT  shift 121
	GTE  shift 122
	LT  shift 119
	LTE  shift 120
	LIKE  shift 124
	IS  shift 128
	DOT  shift 126
	MOD  shift 114
	.  reduce 96 (src line 831)


state 51
	expr:  prefix_expr.    (124)

	.  reduce 124 (src line 1044)


state 52
	prefix_expr:  NOT.prefix_expr 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	prefix_expr  goto 129
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 53
	prefix_expr:  MINUS.prefix_expr 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	prefix_expr  goto 130
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 54
	prefix_expr:  suffix_expr.    (127)

	.  reduce 127 (src line 1064)


state 55
	suffix_expr:  atom.    (128)

	.  reduce 128 (src line 1069)


state 56
	atom:  IDENTIFIER.    (129)
	atom:  IDENTIFIER.LPAREN RPAREN 
	atom:  IDENTIFIER.LPAREN function_arg_list RPAREN 
	atom:  IDENTIFIER.LPAREN DISTINCT function_arg_list RPAREN 
	atom:  IDENTIFIER.LPAREN UNIQUE function_arg_list RPAREN 

	LPAREN  shift 131
	.  reduce 129 (src line 1075)


state 57
	atom:  literal_value.    (130)

	.  reduce 130 (src line 1081)


state 58
	atom:  LPAREN.expression RPAREN 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expression  goto 132
	expr  goto 50
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 59
	atom:  CASE.WHEN then_list else_expr END 

	WHEN  shift 133
	.  error


state 60
	atom:  ANY.expr SATISFIES expr END 
	atom:  ANY.IDENTIFIER IN expr SATISFIES expr END 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 135
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 134
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 61
	atom:  EVERY.IDENTIFIER IN expr SATISFIES expr END 
	atom:  EVERY.expr SATISFIES expr END 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 136
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 137
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 62
	atom:  FIRST.expr FOR IDENTIFIER IN expr WHEN expr END 
	atom:  FIRST.expr IN expr WHEN expr END 
	atom:  FIRST.expr FOR IDENTIFIER IN expr END 
	atom:  FIRST.expr IN expr END 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 138
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 63
	atom:  ARRAY.expr FOR IDENTIFIER IN expr WHEN expr END 
	atom:  ARRAY.expr IN expr WHEN expr END 
	atom:  ARRAY.expr FOR IDENTIFIER IN expr END 
	atom:  ARRAY.expr IN expr END 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 139
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 64
	literal_value:  STRING.    (165)

	.  reduce 165 (src line 1362)


state 65
	literal_value:  number.    (166)

	.  reduce 166 (src line 1368)


state 66
	literal_value:  object.    (167)

	.  reduce 167 (src line 1372)


state 67
	literal_value:  array.    (168)

	.  reduce 168 (src line 1376)


state 68
	literal_value:  TRUE.    (169)

	.  reduce 169 (src line 1380)


state 69
	literal_value:  FALSE.    (170)

	.  reduce 170 (src line 1386)


state 70
	literal_value:  NULL.    (171)

	.  reduce 171 (src line 1392)


state 71
	number:  INT.    (172)

	.  reduce 172 (src line 1400)


state 72
	number:  NUMBER.    (173)

	.  reduce 173 (src line 1406)


state 73
	object:  LBRACE.RBRACE 
	object:  LBRACE.named_expression_list RBRACE 

	RBRACE  shift 140
	STRING  shift 143
	.  error

	named_expression_list  goto 141
	named_expression_single  goto 142

state 74
	array:  LBRACKET.RBRACKET 
	array:  LBRACKET.expression_list RBRACKET 

	LBRACE  shift 73
	LBRACKET  shift 74
	RBRACKET  shift 144
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expression_list  goto 145
	expression  goto 146
	expr  goto 50
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 75
	select_select:  select_select_head select_select_qualifier select_select_tail.    (29)

	.  reduce 29 (src line 289)


state 76
	select_select_tail:  result_list.    (34)

	.  reduce 34 (src line 326)


state 77
	result_list:  result_single.    (35)
	result_list:  result_single.COMMA result_list 

	COMMA  shift 147
	.  reduce 35 (src line 340)


state 78
	result_single:  dotted_path_star.    (37)

	.  reduce 37 (src line 358)


state 79
	result_single:  expression.    (38)
	result_single:  expression.AS IDENTIFIER 
	result_single:  expression.IDENTIFIER 

	AS  shift 148
	IDENTIFIER  shift 149
	.  reduce 38 (src line 362)


state 80
	dotted_path_star:  MULT.    (41)

	.  reduce 41 (src line 385)


state 81
	dotted_path_star:  expr.DOT MULT 
	expression:  expr.    (96)
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.MOD expr 
	expr:  expr.CONCAT expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 
	expr:  expr.LIKE expr 
	expr:  expr.NOT LIKE expr 
	expr:  expr.DOT IDENTIFIER 
	expr:  expr.LBRACKET expr RBRACKET 
	expr:  expr.LBRACKET INT COLON INT RBRACKET 
	expr:  expr.LBRACKET INT COLON RBRACKET 
	expr:  expr.LBRACKET COLON INT RBRACKET 
	expr:  expr.IS NULL 
	expr:  expr.IS NOT NULL 
	expr:  expr.IS MISSING 
	expr:  expr.IS NOT MISSING 
	expr:  expr.IS VALUED 
	expr:  expr.IS NOT VALUED 

	LBRACKET  shift 127
	PLUS  shift 110
	MINUS  shift 111
	MULT  shift 112
	DIV  shift 113
	CONCAT  shift 115
	AND  shift 116
	OR  shift 117
	NOT  shift 125
	EQ  shift 118
	NE  shift 123
	GT  shift 121
	GTE  shift 122
	LT  shift 119
	LTE  shift 120
	LIKE  shift 124
	IS  shift 128
	DOT  shift 150
	MOD  shift 114
	.  reduce 96 (src line 831)


state 82
	select_from_required:  FROM COLON IDENTIFIER.DOT data_source_unnest 

	DOT  shift 151
	.  error


state 83
	data_source_unnest:  data_source unnest_source.    (49)

	.  reduce 49 (src line 459)


state 84
	unnest_source:  UNNEST.path 
	unnest_source:  UNNEST.path AS IDENTIFIER 
	unnest_source:  UNNEST.path IDENTIFIER 
	unnest_source:  UNNEST.path unnest_source 
	unnest_source:  UNNEST.path key_expr 
	unnest_source:  UNNEST.path AS IDENTIFIER unnest_source 
	unnest_source:  UNNEST.path IDENTIFIER unnest_source 

	IDENTIFIER  shift 35
	.  error

	path  goto 152

state 85
	unnest_source:  JOIN.path join_key_expr 
	unnest_source:  JOIN.path AS IDENTIFIER join_key_expr 
	unnest_source:  JOIN.path IDENTIFIER join_key_expr 
	unnest_source:  JOIN.path join_key_expr unnest_source 
	unnest_source:  JOIN.path AS IDENTIFIER join_key_expr unnest_source 
	unnest_source:  JOIN.path IDENTIFIER join_key_expr unnest_source 

	IDENTIFIER  shift 35
	.  error

	path  goto 153

state 86
	unnest_source:  join_type.JOIN path join_key_expr 
	unnest_source:  join_type.JOIN path join_key_expr unnest_source 
	unnest_source:  join_type.JOIN path IDENTIFIER join_key_expr 
	unnest_source:  join_type.JOIN path IDENTIFIER join_key_expr unnest_source 
	unnest_source:  join_type.JOIN path AS IDENTIFIER join_key_expr 
	unnest_source:  join_type.JOIN path AS IDENTIFIER join_key_expr unnest_source 

	JOIN  shift 154
	.  error


state 87
	join_type:  INNER.    (71)

	.  reduce 71 (src line 635)


state 88
	join_type:  LEFT.    (72)
	join_type:  LEFT.OUTER 

	OUTER  shift 155
	.  reduce 72 (src line 640)


state 89
	data_source:  path key_expr.    (75)

	.  reduce 75 (src line 658)


state 90
	data_source:  path AS.IDENTIFIER 
	data_source:  path AS.IDENTIFIER key_expr 

	IDENTIFIER  shift 156
	.  error


state 91
	data_source:  path IDENTIFIER.    (77)
	data_source:  path IDENTIFIER.key_expr 

	KEY  shift 94
	KEYS  shift 95
	.  reduce 77 (src line 671)

	key_expr  goto 157

state 92
	path:  path LBRACKET.INT RBRACKET 
	path:  path LBRACKET.INT COLON INT RBRACKET 
	path:  path LBRACKET.INT COLON RBRACKET 
	path:  path LBRACKET.COLON INT RBRACKET 

	COLON  shift 159
	INT  shift 158
	.  error


state 93
	path:  path DOT.IDENTIFIER 

	IDENTIFIER  shift 160
	.  error


state 94
	key_expr:  KEY.expr 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 161
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 95
	key_expr:  KEYS.expr 

	LBRACE  shift 73
	LBRACKET  shift 74
	TRUE  shift 68
	FALSE  shift 69
	NULL  shift 70
	INT  shift 71
	NUMBER  shift 72
	IDENTIFIER  shift 56
	STRING  shift 64
	MINUS  shift 53
	NOT  shift 52
	LPAREN  shift 58
	CASE  shift 59
	ANY  shift 60
	FIRST  shift 62
	ARRAY  shift 63
	EVERY  shift 61
	.  error

	expr  goto 162
	prefix_expr  goto 51
	suffix_expr  goto 54
	atom  goto 55
	literal_value  goto 57
	number  goto 65
	object  goto 66
	array  goto 67

state 96
	drop_index_stmt:  DROP INDEX IDENTIFIER DOT.IDENTIFIER 

	IDENTIFIER  shift 163
	.  error


state 97
	drop_index_stmt:  DROP INDEX COLON IDENTIFIER.DOT IDENTIFIER DOT IDENTIFIER 

	DOT  shift 164
	.  error


state 98
	select_limit_offset:  select_limit select_offset.    (93)

	.  reduce 93 (src line 794)


state 99
	select_offset:  OFFSET.INT 

	INT  shift 165
	.  error


state 100
	select_limit:  LIMIT INT.    (94)

	.  reduce 94 (src line 800)


state 101
	select_order:  ORDER BY sorting_list.    (85)

	.  reduce 85 (src line 737)


state 102
	sorting_list:  sorting_single.    (86)
	sorting_list:  sorting_single.COMMA sorting_list 

	COMMA  shift 166
	.  reduce 86 (src line 743)


state 103
	sorting_single:  expression.    (88)
	sorting_single:  expression.ASC 
	sorting_single:  expression.DESC 

	ASC  shift 167
	DESC  shift 168
	.  reduce 88 (src line 752)


state 104
	create_primary_index_stmt:  CREATE PRIMARY INDEX ON.IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX ON.COLON IDENTIFIER DOT IDENTIFIER 
	create_primary_index_stmt:  CREATE PRIMARY INDEX ON.IDENTIFIER USING view_using 
	create_primary_index_stmt:  CREATE PRIMARY INDEX ON.COLON IDENTIFIER DOT IDENTIFIER USING view_using 

	COLON  shift 170
	IDENTIFIER  shift 169
	.  error


state 105
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER ON.IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER ON.COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER ON.IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER ON.COLON IDENTIFIER DOT IDENTIFIER LPAREN expression_list RPAREN USING view_using 
	create_secondary_index_stmt:  CREATE INDEX IDENTIFIER ON.select_stmt 

	SELECT  shift 17
	FROM  shift 16
	COLON  shift 172
	IDENTIFIER  shift 171
	.  error

	select_stmt  goto 173
	select_compound  goto 7
	select_core  goto 11
	select_select  goto 13
	select_from_required  goto 14
	select_select_head  goto 15

state 106
	select_core:  select_select select_from select_where select_group_having.    (23)

	.  reduce 23 (src line 248)


state 107
	select_from:  FROM COLON IDENTIFIER.DOT data_source_unnest 

	DOT  shift 174
	.  error


state 108
	select_core:  select_from_required select_where select_group_having select_select.    (24)
